TPLWYLIA-36 #resolve fixing align of arrow in shackslides navigation

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2924,6 +2924,7 @@ div{
 		height: 60px;
 		text-indent: -9999px;
 		width: 51px !important;
+		top: 45%;
 	}
 
 	.sliderPrev {
@@ -2935,6 +2936,7 @@ div{
 		right: 31px;
 	}
 }
+
 #main{
 	.slidermanButtonsCont{
 		.sliderPrev {
